--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,5 @@
-@(message: String)
-
-@main("Welcome to Play 2.1") {
+@(message: String = "")@main("Welcome to Play 2.1") {
     
-    <h1>Hello</h1>
+    Game Server
     
 }
